syntax = "proto3";

package com.zakl.protobuf;

option optimize_for = SPEED;

option java_package = "com.zakl.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {
    rpc GetRealNameByUserName (MyRequest) returns (MyResponse) {}

    rpc GetStudentsBuAge(StudentRequest) returns(stream StudentResponse){}

    rpc GetStudentWrapperByAges(stream StudentRequest)returns(StudentResponseList){};

    rpc GetStudentWrapperByAges2(stream StudentRequest)returns(stream StudentResponse){}


}


message MyRequest {
    string username = 1;
}


message MyResponse {
    string realname = 2;
}

message StudentRequest{
    int32 age=1;

}



message StudentResponse {
    string name = 1;
    string age = 2;
    string city = 3;
}

message StudentResponseList{
    repeated StudentResponse studentResponse=1;
}

